[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/mob.glb" type="PackedScene" id=1]
[ext_resource path="res://Mob.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.403605, 1 )

[sub_resource type="Curve3D" id=2]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -17.0067, 0, -17.4272, 0, 0, 0, 0, 0, 0, 18.5108, 0, -17.4272, 0, 0, 0, 0, 0, 0, 18.4291, 0, 18.1719, 0, 0, 0, 0, 0, 0, -17.3333, 0, 18.0086, 0, 0, 0, 0, 0, 0, -17.0067, 0, -17.4272 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.451341, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 3.86375 ),
"update": 0,
"values": [ Vector3( 0, 0.25, 0 ), Vector3( 0, 0.59, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 2.82843 ),
"update": 0,
"values": [ Vector3( 13.35, 0, 0 ), Vector3( -16.01, 0, 0 ) ]
}

[node name="Mob" type="KinematicBody" groups=["enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Pivot" type="Spatial" parent="."]

[node name="Character" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.451341, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.599125, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.483014, 0.333778 )
aabb = AABB( -1.13091, -0.463032, -1.6801, 2.26181, 0.926065, 3.3602 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 2 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0067, 0, -17.4272 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/float = SubResource( 4 )

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
